refactor: prepare codebase for open source release
This commit prepares the codebase for open source publication by:

Security & Code Quality:
- Fix command injection vulnerability in email notification channel
- Enhance secret redaction in structured logging with comprehensive paths
- Remove 300+ lines of duplicated OrganizationDetector code from webhook-client.ts

Open Source Configuration:
- Transform template validation into flexible configuration system
- Add support for arbitrary templates via TemplateValidationConfig interface
- Implement multi-channel notifications (Slack, Discord, email, desktop)
- Add multiple output destinations (Airtable, Google Sheets, JSON, webhooks)
- Create backwards-compatible configuration for existing users

Examples & Documentation Cleanup:
- Reduce examples directory from 40+ files to 6 essential examples
- Consolidate all user documentation into README.md
- Remove internal development documentation files
- Ensure professional documentation without emojis

Dependencies & Build:
- Move pino-pretty from dependencies to devDependencies
- Update package configuration for TypeScript exports

The system maintains 100% backwards compatibility while providing a
foundation for flexible, multi-tenant usage as an open source project.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   ],
   "scripts": {
     "generate": "openapi-typescript openapi.yaml -o src/schema.d.ts",
-    "build": "bun build src/index.ts --outdir dist && bun run build:types && bun run build:schema",
+    "build": "bun build src/index.ts --outdir dist --target node && bun run build:types && bun run build:schema",
     "build:types": "tsc -p tsconfig.build.json",
     "build:schema": "cp src/schema.d.ts dist/",
     "test": "bun test",
@@ -31,11 +31,16 @@
     "ci": "bun run lint && bun run test && bun run build",
     "prepublishOnly": "bun run ci"
   },
-  "dependencies": {},
+  "dependencies": {
+    "pino": "^9.7.0",
+    "zod": "^3.25.67"
+  },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/pino": "^7.0.5",
     "biome": "^0.3.3",
     "openapi-typescript": "^7.6.1",
+    "pino-pretty": "^13.0.0",
     "typescript": "^5.0.0"
   },
   "peerDependencies": {
